--- a/public/src/index.html
+++ b/public/src/index.html
@@ -9,20 +9,34 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app>
-    <div id="pageloader-wrapper">
-      <div class="preloader-wrapper big active">
-        <div class="spinner-layer spinner-red-only">
-          <div class="circle-clipper left">
-            <div class="circle"></div>
-          </div><div class="gap-patch">
-            <div class="circle"></div>
-          </div><div class="circle-clipper right">
-            <div class="circle"></div>
+  <div id="app-container">
+    <app>
+      <div id="pageloader-wrapper">
+        <div class="preloader-wrapper big active">
+          <div class="spinner-layer spinner-red-only">
+            <div class="circle-clipper left">
+              <div class="circle"></div>
+            </div><div class="gap-patch">
+              <div class="circle"></div>
+            </div><div class="circle-clipper right">
+              <div class="circle"></div>
+            </div>
           </div>
         </div>
       </div>
+    </app>
+  </div>
+  <footer id="footer" class="page-footer grey">
+    <div class="footer-copyright">
+      <div class="container">
+        <div class="row">
+          <a class="grey-text text-lighten-4" href="/credits">Credits</a>
+        </div>
+        <div class="row">
+          <a class="grey-text text-lighten-4" href="/api/doc" target="_blank">API Documentation</a>
+        </div>
+      </div>
     </div>
-  </app>
+  </footer>
 </body>
 </html>
