--- a/public/src/index.html
+++ b/public/src/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div id="app-container">
-    <app>
+    <div id="pageloader-container">
       <div id="pageloader-wrapper">
         <div class="preloader-wrapper big active">
           <div class="spinner-layer spinner-red-only">
@@ -24,7 +24,7 @@
           </div>
         </div>
       </div>
-    </app>
+    </div>
   </div>
   <footer id="footer" class="page-footer grey">
     <div class="footer-copyright">
