--- a/public/src/index.html
+++ b/public/src/index.html
@@ -10,21 +10,23 @@
 </head>
 <body>
   <div id="app-container">
-    <div id="pageloader-container">
-      <div id="pageloader-wrapper">
-        <div class="preloader-wrapper big active">
-          <div class="spinner-layer spinner-red-only">
-            <div class="circle-clipper left">
-              <div class="circle"></div>
-            </div><div class="gap-patch">
-              <div class="circle"></div>
-            </div><div class="circle-clipper right">
-              <div class="circle"></div>
+    <app>
+      <div id="pageloader-container">
+        <div id="pageloader-wrapper">
+          <div class="preloader-wrapper big active">
+            <div class="spinner-layer spinner-red-only">
+              <div class="circle-clipper left">
+                <div class="circle"></div>
+              </div><div class="gap-patch">
+                <div class="circle"></div>
+              </div><div class="circle-clipper right">
+                <div class="circle"></div>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
+    </app>
   </div>
   <footer id="footer" class="page-footer grey">
     <div class="footer-copyright">
