credits now open in new tab

--- a/public/src/index.html
+++ b/public/src/index.html
@@ -32,7 +32,7 @@
     <div class="footer-copyright">
       <div class="container">
         <div class="row">
-          <a class="grey-text text-lighten-4" href="/credits">Credits</a>
+          <a class="grey-text text-lighten-4" href="/credits" target="_blank">Credits</a>
         </div>
         <div class="row">
           <a class="grey-text text-lighten-4" href="/api/doc" target="_blank">API Documentation</a>
