--- a/public/src/index.html
+++ b/public/src/index.html
@@ -32,6 +32,9 @@
     <div class="footer-copyright">
       <div class="container">
         <div class="row">
+          <a class="grey-text text-lighten-4" href="/">Home</a>
+        </div>
+        <div class="row">
           <a class="grey-text text-lighten-4" href="/credits" target="_blank">Credits</a>
         </div>
         <div class="row">
