Added readme images/fixed time when footer is shown

--- a/public/src/index.html
+++ b/public/src/index.html
@@ -28,7 +28,7 @@
       </div>
     </app>
   </div>
-  <footer id="footer" class="page-footer grey">
+  <footer id="footer" class="page-footer grey" hidden>
     <div class="footer-copyright">
       <div class="container">
         <div class="row">
